# bare_metal_firmware

./: .gitignore  CMakeLists.txt  STM32F303VCTx_BOOTLOADER.ld
app/: Makefile  linkerscript.ld
app/inc/: common-defines.h
app/inc/core/: common-defines.h  system.h  timer.h
app/src/: main.c  timer.c
app/src/core/: system.c  timer.c
bootloader/src/: bootloader.S  bootloader.c
cmake/: stm32f303.cmake  toolchain-arm-none-eabi-gcc.cmake
scripts/: pad_bootloader.py
shared/inc/core/: system.h
shared/src/core/: system.c
